Revise academic position descriptions in index.html
Updated the description of academic positions and affiliations.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                       I am a first-year Master’s student at
                       <a href="https://www.yonsei.ac.kr/en_sc/">Yonsei University</a>,
                       advised by
-                      <a href="https://yj-yu.github.io/home/">Professor Yu</a>. 
+                      <a href="https://yj-yu.github.io/home/">Professor Yu</a>. <br>
                       
-                      I am currently a visiting student with Prof. <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a> at <a href="https://laszlojeni.com/index.html#lab">CUBE lab</a>, CMU. 
+                      I am currently a visiting researcher advised by Prof. <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a> at <a href="https://laszlojeni.com/index.html#lab">CUBE lab</a>, CMU. <br>
                       
                       I received my B.S. in
                       <a href="https://yonsei.elsevierpure.com/en/organisations/department-of-electrical-and-electronic-engineering">
