Revise personal introduction in index.html
Updated personal information and clarified research role.

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
                     <p class="name" style="text-align:center;">Jungbin Cho</p>
 
                     <p>
-                      I am a first-year Master’s student at
+                      I am a Master’s student at
                       <a href="https://www.yonsei.ac.kr/en_sc/">Yonsei University</a>,
                       advised by
                       <a href="https://yj-yu.github.io/home/">Professor Yu</a>. <br>
                       
-                      I am currently a visiting researcher advised by Prof. <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a> at <a href="https://laszlojeni.com/index.html#lab">CUBE lab</a>, CMU. <br>
+                      I am currently a visiting researcher with Prof. <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a> at <a href="https://laszlojeni.com/index.html#lab">CUBE lab</a>, CMU, working on human related projects. <br>
                       
-                      I received my B.S. in
+                      <!-- I received my B.S. in
                       <a href="https://yonsei.elsevierpure.com/en/organisations/department-of-electrical-and-electronic-engineering">
                         Electrical and Electronic Engineering
                       </a>
-                      from Yonsei University.
+                      from Yonsei University. -->
                     </p>
 
                     <p style="text-align:center;">
