Add AlignHOI publication to index.html
Added a new publication entry for AlignHOI.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@ I am interested in building realistic virtual environments and digital avatars t
             </table>
 
             <!-- ───────────── Publications ───────────── -->
+
+              <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
+              <tbody>
+                <!-- AlignHOI-->
+                <tr>
+                  <td style="padding:16px;width:20%;vertical-align:middle;">
+                    <img src="images/comming_soon.jpg" class="paper-img" alt="sceneadapt thumbnail">
+                  </td>
+                  <td style="padding:8px;width:80%;vertical-align:middle;">
+                    <a href="https://whwjdqls.github.io/">
+                      <span class="papertitle">AlignHOI: Hand–Object Reconstruction via Alignment and Refinement</span>
+                    </a><br>
+                  Liting Wen, Xin Lv, <strong>Jungbin Cho</strong>, <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a>, Xiao-Xiao Long
+                  
+              
+                    <em>preprint</em>
+                    <p>Reconstructing hand object interactions from monocular videos.</p>
+                  </td>
+                </tr>
+
             <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
               <tbody>
                 <!-- SceneAdapt -->
