Add line break after author names in index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     <a href="https://whwjdqls.github.io/">
                       <span class="papertitle">AlignHOI: Hand–Object Reconstruction via Alignment and Refinement</span>
                     </a><br>
-                  Liting Wen, Xin Lv, <strong>Jungbin Cho</strong>, <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a>, Xiao-Xiao Long
+                  Liting Wen, Xin Lv, <strong>Jungbin Cho</strong>, <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a>, Xiao-Xiao Long<br>
                   
               
                     <em>preprint</em>
