Update paper links in index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     <img src="images/comming_soon.jpg" class="paper-img" alt="sceneadapt thumbnail">
                   </td>
                   <td style="padding:8px;width:80%;vertical-align:middle;">
-                    <a href="https://whwjdqls.github.io/">
+                    <a href="https://litingww.github.io/images/research/AlignHOI.pdf">
                       <span class="papertitle">AlignHOI: Hand–Object Reconstruction via Alignment and Refinement</span>
                     </a><br>
                   Liting Wen, Xin Lv, <strong>Jungbin Cho</strong>, <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a>, Xiao-Xiao Long<br>
@@ -135,7 +135,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     <img src="images/scene-adapt.png" class="paper-img" alt="sceneadapt thumbnail">
                   </td>
                   <td style="padding:8px;width:80%;vertical-align:middle;">
-                    <a href="https://sceneadapt.github.io/">
+                    <a href="https://arxiv.org/abs/2510.13044">
                       <span class="papertitle">SceneAdapt: Scene-aware Adaptation of Human Motion Diffusion</span>
                     </a><br>
                     <strong>Jungbin Cho</strong><sup>*</sup>, Minsu Kim<sup>*</sup>,
