Update research description and conference details

--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
                   <td style="padding:16px;">
                     <h2>Research</h2>
                     <p>
-I am interested in building realistic virtual environments and digital avatars that can interact with humans in intuitive and natural ways. 
-                      Toward this goal, I develop and refine methods in computer vision, computer graphics, and generative modeling.
-                      Recently, my work has focused on 3D human motion generation and understanding how humans interact with their surrounding scenes. 
+My long-term goal is to build a human foundation model: an embodied system that perceives, moves, and interacts with its surroundings and with people, whether as a digital human or a humanoid robot.  
                     </p>
                   </td>
                 </tr>
@@ -166,7 +164,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     <a href="https://www.csehong.com/">Sungeun Hong</a>,
                     <a href="https://ami.postech.ac.kr/members/tae-hyun-oh">Tae-Hyun Oh</a>,
                     <a href="https://yj-yu.github.io/home/">Youngjae Yu</a><br>
-                    <em>ICCV</em> 2025 (✨<strong><em>Highlight</em></strong>)
+                    <em>ICCV</em> 2025 (✨<strong><em>Highlight</em></strong> 263/11239=2.34%)
                     <!-- <em>ICCV</em> 2025 (✨ <span class="highlight-background">Highlight</span>) -->
                     <p>Generating smooth and natural motion by decoding discrete motion tokens with rectified flow.</p>
                   </td>
