--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                       <a href="https://www.overleaf.com/read/nrgymmmvhchq#110461">CV</a> &nbsp;/&nbsp;
                       <a href="https://scholar.google.com/citations?user=DWd9_qQAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                       <a href="https://github.com/whwjdqls">Github</a>
+                      <a href="www.linkedin.com/in/jungbin-cho-55302b266">LinkedIn</a>
                     </p>
                   </td>
 
