Replace coming soon image with AlignHOI image

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ My long-term goal is to build a human foundation model: an embodied system that 
                 <!-- AlignHOI-->
                 <tr>
                   <td style="padding:16px;width:20%;vertical-align:middle;">
-                    <img src="images/comming_soon.jpg" class="paper-img" alt="sceneadapt thumbnail">
+                    <img src="images/AlignHOI.png" class="paper-img" alt="sceneadapt thumbnail">
                   </td>
                   <td style="padding:8px;width:80%;vertical-align:middle;">
                     <a href="https://litingww.github.io/images/research/AlignHOI.pdf">
