Fix GitHub link formatting in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                       <a href="mailto:whwjdqls99@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
                       <a href="https://www.overleaf.com/read/nrgymmmvhchq#110461">CV</a> &nbsp;/&nbsp;
                       <a href="https://scholar.google.com/citations?user=DWd9_qQAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
-                      <a href="https://github.com/whwjdqls">Github</a>
+                      <a href="https://github.com/whwjdqls">Github</a> &nbsp;/&nbsp;
                       <a href="www.linkedin.com/in/jungbin-cho-55302b266">LinkedIn</a>
                     </p>
                   </td>
