--- a/index.html
+++ b/index.html
@@ -50,14 +50,23 @@
                       </a>
                       from Yonsei University. -->
                     </p>
-
+<!-- 
                     <p style="text-align:center;">
-                      <a href="mailto:whwjdqls99@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
-                      <a href="https://www.overleaf.com/read/nrgymmmvhchq#110461">CV</a> &nbsp;/&nbsp;
+                      <a href="mailto:whwjdqls99@yonsei.ac.kr">Email</a> &nbsp;/&nbsp; -->
+                      <!-- <a href="https://www.overleaf.com/read/nrgymmmvhchq#110461">CV</a> &nbsp;/&nbsp;-->
+                      <!-- <a href="images/cv.pdf">CV</a> &nbsp;/&nbsp;
                       <a href="https://scholar.google.com/citations?user=DWd9_qQAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                       <a href="https://github.com/whwjdqls">Github</a> &nbsp;/&nbsp;
                       <a href="www.linkedin.com/in/jungbin-cho-55302b266">LinkedIn</a>
-                    </p>
+                    </p> -->
+
+<p style="text-align:center;">
+  <a href="mailto:whwjdqls99@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
+  <a href="images/cv.pdf">CV</a> &nbsp;/&nbsp;
+  <a href="https://scholar.google.com/citations?user=DWd9_qQAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
+  <a href="https://github.com/whwjdqls">Github</a> &nbsp;/&nbsp;
+  <a href="https://www.linkedin.com/in/jungbin-cho-55302b266">LinkedIn</a>
+</p>
                   </td>
 
                   <!-- Photo column -->
