Update paper link in index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ My long-term goal is to build a human foundation model: an embodied system that 
                     <img src="images/pri4r.png" class="paper-img" alt="sceneadapt thumbnail">
                   </td>
                   <td style="padding:8px;width:80%;vertical-align:middle;">
-                    <a href="https://litingww.github.io/images/research/AlignHOI.pdf">
+                    <a href="https://whwjdqls.github.io/">
                       <span class="papertitle">Pri4R: Learning World Dynamics for Vision-Language-Action Models with Privileged 4D Representation</span>
                     </a><br>
                   Jisoo Kim*, <strong>Jungbin Cho*</strong>, Sanghyeok Chu, Ananya Bal, Jinhyung Kim, Gunhee Lee, Sihaeng Lee, Seung Hwan Kim, Bohyung Han, Hyunmin Lee, <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a>, Seungryong Kim<br>
