Add upcoming paper announcement to news section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       <td style="padding:16px;">
         <h2>News</h2>
         <ul style="list-style-type:none;margin:0;padding-left:0;">
+          <li style="margin-bottom:6px;">📝 <b>Feb&nbsp;2026</b> — Our paper on Vision Language Action model is comming soon!.</li>
           <!-- 2025 -->
           <li style="margin-bottom:6px;">📝 <b>Nov&nbsp;2025</b> — Our paper on hand object interaction reconstruction is out.</li>
           <li style="margin-bottom:6px;">📝 <b>Oct&nbsp;2025</b> — New paper on Scene-aware adaptation is out.</li>
