Remove Korean name from the title tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
 
-    <title>Jungbin Cho, 조정빈</title>
+    <title>Jungbin Cho</title>
 
     <meta name="author" content="Jungbin Cho">
     <meta name="viewport" content="width=device-width, initial-scale=1">
